FrontEnd/src/radin/parsing/Parser.java
package radin.parsing;

import radin.interphase.lexical.Token;
import radin.lexing.Lexer;
import radin.interphase.lexical.TokenType;

import java.util.*;

import static radin.interphase.lexical.TokenType.t_const;

public class Parser extends BasicParser {
    
    private HashSet<String> typedefed;
    private HashSet<String> compoundTypeNames;
    private Stack<HashSet<String>> typedefStack;
    private Stack<HashSet<String>> compoundTypesStack;
    
    public Parser(Lexer lexer, String... types) {
        super(lexer);
        typedefed = new HashSet<>();
        typedefed.addAll(Arrays.asList(types));
        compoundTypeNames = new HashSet<>();
        typedefStack = new Stack<>();
        compoundTypesStack = new Stack<>();
    }
    
    @Override
    protected void pushState() {
        super.pushState();
        typedefStack.push(new HashSet<>(typedefed));
        compoundTypesStack.push(new HashSet<>(compoundTypeNames));
    }
    
    @Override
    protected boolean popState() {
        boolean b = super.popState();
        if(b) {
            typedefStack.pop();
            compoundTypesStack.pop();
        }
        return b;
    }
    
    @Override
    protected boolean applyState() {
        boolean b = super.applyState();
        if(b) {
            typedefed = typedefStack.pop();
            compoundTypeNames = compoundTypesStack.pop();
        }
        return b;
    }
    
    public HashSet<String> getTypedefed() {
        return typedefed;
    }
    
    private boolean isTypeName(String image) {
        return typedefed.contains(image);
    }
    private boolean isCompoundTypeName(String image) {
        return compoundTypeNames.contains(image);
    }
    
    @Override
    protected Token getCurrent() {
        Token output = super.getCurrent();
        if(output.getType().equals(TokenType.t_id) && (isTypeName(output.getImage()))) {
            
            
            output = new Token(TokenType.t_typename, output.getImage())
                    .addColumnAndLineNumber(output.getColumn(), output.getLineNumber());
        }
        return output;
    }
    
    protected Token undoTypeName(Token other) {
        if(other.getType() != TokenType.t_typename) return other;
        return new Token(TokenType.t_id, other.getImage()).addColumnAndLineNumber(other.getColumn(), other.getColumn());
    }
    
    public CategoryNode parse() {
        CategoryNode output = new CategoryNode("Program");
        lexer.reset();
        if(!parseTopLevelDecsList(output)) {
            return null;
        }
        return output;
    }
    
    private boolean parseTopLevelDecsList(CategoryNode parent) {
        CategoryNode output = new CategoryNode("TopLevelDecsList");
        
        if(!getCurrentType().equals(TokenType.t_eof)) {
            if (!parseTopLevelDeclaration(output)) return false;
            if (!parseTopLevelDecsTail(output)) return false;
        }
        
        parent.addChild(output);
        return true;
    }
    
    private boolean parseTopLevelDeclaration(CategoryNode parent) {
        CategoryNode child = new CategoryNode("TopLevelDeclaration");
        
        OUTER:
        switch (getCurrentType()) {
            case t_typedef: {
                if(!parseTypeDef(child)) return false;
                if(!consume(TokenType.t_semic)) return error("Missing semi-colon");
                break;
            }
            case t_class:
                switch (attemptParse(this::parseClassDeclaration, child)) {
                    case PARSED:
                        break OUTER;
                    case ROLLBACK:
                    case DESYNC:
                        break;
                }
            case t_typename:
            case t_void:
            case t_char:
            case t_int:
            case t_long:
            case t_float:
            case t_double:
            case t_unsigned:
            case t_struct:
            case t_union:
            case t_lpar:
            case t_const:
            {
                /*
                if(!attemptParse(this::parseDeclaration, child)) {
                    if(!parseFunctionDefinition(child)) return error("Could not parse declaration", true);
                }
                */
                
                if(!oneMustParse(child, this::parseFunctionDefinition,this::parseDeclaration)) {
                    return error("Could not parse declaration", true);
                }
                /*
                if(!attemptParse(this::parseFunctionDefinition, child)) {
                    if(!parseDeclaration(child)) return error("Could not parse declaration");
                    
                }
                
                 */
                break;
            }
            
        }
        clearErrors();
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseTopLevelDecsTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("TopLevelDecsTail");
        
        if(!getCurrentType().equals(TokenType.t_eof)) {
            if(!parseTopLevelDecsList(child)) return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    
    private boolean parseFunctionDefinition(CategoryNode parent) {
        CategoryNode child = new CategoryNode("FunctionDefinition");
        
        
        attemptParse(this::parseDeclarationSpecifiers, child);
        if(!parseDeclarator(child)) return false;
        if(!match(TokenType.t_lcurl)) {
            if(!parseDeclarationList(child)) return false;
        }
        if(!parseCompoundStatement(child)) return false;
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseStatement(CategoryNode parent) {
        CategoryNode child = new CategoryNode("Statement");
        
        switch (getCurrentType()) {
            case t_lcurl: {
                if(!parseCompoundStatement(child)) return false;
                break;
            }
            case t_if: {
                if(!parseSelectionStatement(child)) return false;
                break;
            }
            case t_while:
            case t_for:
            case t_do: {
                if(!parseIterationStatement(child)) return false;
                break;
            }
            case t_return: {
                if (!parseJumpStatement(child)) return false;
                break;
            }
            case t_typename:
            case t_void:
            case t_char:
            case t_int:
            case t_long:
            case t_float:
            case t_double:
            case t_unsigned:
            case t_struct:
            case t_union:
            case t_class:
            case t_const: {
                if(!parseDeclaration(child)) return false;
                break;
            }
            default:
                if(!parseExpressionStatement(child)) return false;
                break;
            
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseTopExpression(CategoryNode parent) {
        CategoryNode child = new CategoryNode("TopExpression");
        
        if(!parseAssignmentExpression(child)) return false;
        if(consume(TokenType.t_comma)) {
            if(!parseTopExpression(child)) return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    
    private boolean parseExpressionStatement(CategoryNode parent) {
        CategoryNode child = new CategoryNode("ExpressionStatement");
        
        attemptParse(this::parseTopExpression, child);
        if(!consume(TokenType.t_semic)) return error("Missing semi-colon");
        
        parent.addChild(child);
        return true;
    }
    
    
    private boolean parseCompoundStatement(CategoryNode parent) {
        CategoryNode child = new CategoryNode("CompoundStatement");
        
        
        if(!consume(TokenType.t_lcurl)) return error("missing { for compound statement");
        //attemptParse(this::parseDeclarationList, child);
        attemptParse(this::parseStatementList, child);
        if(!consume(TokenType.t_rcurl)) return error("missing matching } for compound statement");
        
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseIterationStatement(CategoryNode parent) {
        CategoryNode child = new CategoryNode("IterationStatement");
        
        switch (getCurrentType()) {
            case t_while: {
                consumeAndAddAsLeaf(child);
                if(!consume(TokenType.t_lpar)) return false;
                if(!parseTopExpression(child)) return false;
                if(!consume(TokenType.t_rpar)) return false;
                if(!parseStatement(child)) return false;
                break;
            }
            case t_do: {
                consumeAndAddAsLeaf(child);
                if(!parseStatement(child)) return false;
                if(!consume(TokenType.t_while)) return false;
                if(!consume(TokenType.t_lpar)) return false;
                if(!parseTopExpression(child)) return false;
                if(!consume(TokenType.t_rpar)) return false;
                if(!consume(TokenType.t_semic)) return error("Missing semi-colon");
                break;
            }
            case t_for: {
                consumeAndAddAsLeaf(child);
                if(!consume(TokenType.t_lpar)) return false;
                if(!oneMustParse(child, this::parseDeclaration, this::parseExpressionStatement)) {
                    return false;
                }
                /*
                if(!attemptParse(this::parseDeclaration, child)) {
                    if (!parseExpressionStatement(child)) return false;
                }
                */
                
                if(!parseExpressionStatement(child)) return false;
                if(!match(TokenType.t_rpar)) {
                    if(!parseTopExpression(child)) return false;
                }
                if(!consume(TokenType.t_rpar)) return false;
                if(!parseStatement(child)) return false;
                break;
            }
            default:
                return false;
        }
        
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseSelectionStatement(CategoryNode parent) {
        CategoryNode child = new CategoryNode("SelectionStatement");
        
        if(!consumeAndAddAsLeaf(TokenType.t_if, child)) return false;
        if(!consume(TokenType.t_lpar)) return false;
        if(!parseTopExpression(child)) return false;
        if(!consume(TokenType.t_rpar)) return false;
        if(!parseStatement(child)) return false;
        if(consumeAndAddAsLeaf(TokenType.t_else, child)) {
            if(!parseStatement(child)) return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseJumpStatement(CategoryNode parent) {
        CategoryNode child = new CategoryNode("JumpStatement");
        
        switch (getCurrentType()) {
            case t_return: {
                consumeAndAddAsLeaf(child);
                if(!match(TokenType.t_semic)) {
                    if(!parseTopExpression(child)) return false;
                }
                break;
            }
            default:
                return false;
        }
        
        if(!consume(TokenType.t_semic)) return error("Missing semi-colon");
        parent.addChild(child);
        return true;
    }
    
    private boolean parseStatementList(CategoryNode parent) {
        CategoryNode child = new CategoryNode("StatementList");
        
        if(!parseStatement(child)) return false;
        if(!parseStatementListTail(child)) return false;
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseStatementListTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("StatementListTail");
        
        attemptParse(this::parseStatementList, child);
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseDeclarationList(CategoryNode parent) {
        CategoryNode child = new CategoryNode("DeclarationList");
        
        if(!parseDeclaration(child)) return false;
        if(!parseDeclarationListTail(child)) return false;
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseDeclarationListTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("DeclarationListTail");
        
        attemptParse(this::parseDeclarationList, child);
        
        parent.addChild(child);
        return true;
    }
    
    
    
    private boolean parseAssignment(CategoryNode parent) {
        CategoryNode child = new CategoryNode("Assignment");
        
        if(!parseFactor(child)) return false;
        if(!parseAssignOperator(child)) return false;
        if(!parseAssignmentExpression(child)) return false;
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseAssignOperator(CategoryNode parent) {
        CategoryNode child = new CategoryNode("AssignOperator");
        
        switch (getCurrentType()) {
            case t_operator_assign:
            case t_assign: {
                consumeAndAddAsLeaf(child);
                break;
            }
            default:
                return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseExpression(CategoryNode parent) {
        CategoryNode child = new CategoryNode("Expression");
        
        switch (getCurrentType()) {
            case t_minus:
            case t_not:
            case t_bang:
            case t_star:
            case t_and:
            case t_add:
            case t_inc:
            case t_dec:
            case t_lpar:
            case t_literal:
            case t_id:
            case t_string:
            case t_sizeof:
            case t_new:
            case t_super:{
                if(!parseDoubleOr(child)) return false;
                if(!parseDoubleOrTail(child)) return false;
                if(!parseExpressionTail(child)) return false;
                break;
            }
            default:
                return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseExpressionTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("ExpressionTail");
        
        if(consume(TokenType.t_qmark)) {
            if(!parseExpression(child)) return false;
            if(!consume(TokenType.t_colon)) return false;
            if(!parseExpression(child)) return false;
        }
        
        
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseDoubleOr(CategoryNode parent) {
        CategoryNode child = new CategoryNode("DoubleOr");
        
        switch (getCurrentType()) {
            case t_minus:
            case t_not:
            case t_bang:
            case t_star:
            case t_and:
            case t_add:
            case t_inc:
            case t_dec:
            case t_lpar:
            case t_literal:
            case t_id:
            case t_string:
            case t_sizeof:
            case t_new:
            case t_super:{
                if(!parseDoubleAnd(child)) return false;
                if(!parseDoubleAndTail(child)) return false;
                break;
            }
            default:
                return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseDoubleOrTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("DoubleOrTail");
        
        if(match(TokenType.t_dor)) {
            consumeAndAddAsLeaf(child);
            if(!parseDoubleOr(child)) return false;
            if(!parseDoubleOrTail(child)) return false;
        }
        
        
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseDoubleAnd(CategoryNode parent) {
        CategoryNode child = new CategoryNode("DoubleAnd");
        
        switch (getCurrentType()) {
            case t_minus:
            case t_not:
            case t_bang:
            case t_star:
            case t_and:
            case t_add:
            case t_inc:
            case t_dec:
            case t_lpar:
            case t_literal:
            case t_id:
            case t_super:
            case t_string:
            case t_sizeof:
            case t_new:{
                if(!parseOr(child)) return false;
                if(!parseOrTail(child)) return false;
                break;
            }
            default:
                return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseDoubleAndTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("DoubleAndTail");
        
        if(match(TokenType.t_dand)) {
            consumeAndAddAsLeaf(child);
            if(!parseDoubleAnd(child)) return false;
            if(!parseDoubleAndTail(child)) return false;
        }
        
        
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseOr(CategoryNode parent) {
        CategoryNode child = new CategoryNode("Or");
        
        switch (getCurrentType()) {
            case t_minus:
            case t_not:
            case t_bang:
            case t_star:
            case t_and:
            case t_add:
            case t_inc:
            case t_dec:
            case t_lpar:
            case t_literal:
            case t_id:
            case t_string:
            case t_sizeof:
            case t_new:
            case t_super:{
                if(!parseNot(child)) return false;
                if(!parseNotTail(child)) return false;
                break;
            }
            default:
                return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseOrTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("OrTail");
        
        if(match(TokenType.t_bar)) {
            consumeAndAddAsLeaf(child);
            if(!parseOr(child)) return false;
            if(!parseOrTail(child)) return false;
        }
        
        
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseNot(CategoryNode parent) {
        CategoryNode child = new CategoryNode("Not");
        
        switch (getCurrentType()) {
            case t_minus:
            case t_not:
            case t_bang:
            case t_star:
            case t_and:
            case t_add:
            case t_inc:
            case t_dec:
            case t_lpar:
            case t_literal:
            case t_id:
            case t_string:
            case t_sizeof:
            case t_new:
            case t_super:{
                if(!parseAnd(child)) return false;
                if(!parseAndTail(child)) return false;
                break;
            }
            default:
                return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseNotTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("NotTail");
        
        if(match(TokenType.t_crt)) {
            consumeAndAddAsLeaf(child);
            if(!parseNot(child)) return false;
            if(!parseNotTail(child)) return false;
        }
        
        
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseAnd(CategoryNode parent) {
        CategoryNode child = new CategoryNode("And");
        
        switch (getCurrentType()) {
            case t_minus:
            case t_not:
            case t_bang:
            case t_star:
            case t_and:
            case t_add:
            case t_inc:
            case t_dec:
            case t_lpar:
            case t_literal:
            case t_id:
            case t_string:
            case t_sizeof:
            case t_new:
            case t_super:{
                if(!parseEquation(child)) return false;
                if(!parseEquationTail(child)) return false;
                break;
            }
            default:
                return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseAndTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("AndTail");
        
        if(match(TokenType.t_and)) {
            consumeAndAddAsLeaf(child);
            if(!parseAnd(child)) return false;
            if(!parseAndTail(child)) return false;
        }
        
        
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseEquation(CategoryNode parent) {
        CategoryNode child = new CategoryNode("Equation");
        
        switch (getCurrentType()) {
            case t_minus:
            case t_not:
            case t_bang:
            case t_star:
            case t_and:
            case t_add:
            case t_inc:
            case t_dec:
            case t_lpar:
            case t_literal:
            case t_id:
            case t_string:
            case t_sizeof:
            case t_new:
            case t_super:{
                if(!parseC(child)) return false;
                if(!parseCTail(child)) return false;
                break;
            }
            default:
                return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseEquationTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("EquationTail");
        
        
        switch (getCurrentType()) {
            case t_eq:
            case t_neq: {
                consumeAndAddAsLeaf(child);
                if(!parseEquation(child)) return false;
                if(!parseEquationTail(child)) return false;
            }
            default:
                break;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseC(CategoryNode parent) {
        CategoryNode child = new CategoryNode("C");
        
        switch (getCurrentType()) {
            case t_minus:
            case t_not:
            case t_bang:
            case t_star:
            case t_and:
            case t_add:
            case t_inc:
            case t_dec:
            case t_lpar:
            case t_literal:
            case t_id:
            case t_string:
            case t_sizeof:
            case t_new:
            case t_super:{
                if(!parseG(child)) return false;
                if(!parseGTail(child)) return false;
                break;
            }
            default:
                return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseCTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("CTail");
        
        
        switch (getCurrentType()) {
            case t_gte:
            case t_gt:
            case t_lte:
            case t_lt: {
                consumeAndAddAsLeaf(child);
                if(!parseC(child)) return false;
                if(!parseCTail(child)) return false;
            }
            default:
                break;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseG(CategoryNode parent) {
        CategoryNode child = new CategoryNode("G");
        
        switch (getCurrentType()) {
            case t_minus:
            case t_not:
            case t_bang:
            case t_star:
            case t_and:
            case t_add:
            case t_inc:
            case t_dec:
            case t_lpar:
            case t_literal:
            case t_id:
            case t_string:
            case t_sizeof:
            case t_new:
            case t_super:{
                if(!parseT(child)) return false;
                if(!parseTTail(child)) return false;
                break;
            }
            default:
                return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseGTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("GTail");
        
        
        switch (getCurrentType()) {
            case t_lshift:
            case t_rshift: {
                consumeAndAddAsLeaf(child);
                if(!parseG(child)) return false;
                if(!parseGTail(child)) return false;
            }
            default:
                break;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseT(CategoryNode parent) {
        CategoryNode child = new CategoryNode("T");
        
        switch (getCurrentType()) {
            case t_minus:
            case t_not:
            case t_bang:
            case t_star:
            case t_and:
            case t_add:
            case t_inc:
            case t_dec:
            case t_lpar:
            case t_literal:
            case t_id:
            case t_string:
            case t_sizeof:
            case t_new:
            case t_super:{
                if(!parseFactor(child)) return false;
                if(!parseFactorTail(child)) return false;
                break;
            }
            default:
                return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseTTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("TTail");
        
        
        switch (getCurrentType()) {
            case t_add:
            case t_minus:{
                consumeAndAddAsLeaf(child);
                if(!parseT(child)) return false;
                if(!parseTTail(child)) return false;
            }
            default:
                break;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseFactor(CategoryNode parent) {
        CategoryNode child = new CategoryNode("Factor");
        
        switch (getCurrentType()) {
            case t_minus:
            case t_not:
            case t_bang:
            case t_star:
            case t_and:
            case t_add:
            case t_inc:
            case t_dec: {
                consumeAndAddAsLeaf(child);
                if(!parseFactor(child)) return false;
                break;
            }
            case t_string:
            case t_literal: {
                consumeAndAddAsLeaf(child);
                break;
            }
            case t_lpar: {
                AttemptStatus attemptStatus = attemptParse(this::parseCastExpression, child);
                if(attemptStatus == AttemptStatus.ROLLBACK) {
                    if(!parseAtom(child)) return false;
                    if(!parseAtomTail(child)) return false;
                } else if(attemptStatus == AttemptStatus.DESYNC) {
                    return false;
                }
                break;
            }
            case t_id:
            case t_new:
            case t_super:{
                if(!parseAtom(child)) return false;
                if(!parseAtomTail(child)) return false;
                break;
            }
            case t_sizeof: {
                consumeAndAddAsLeaf(child);
                if(!consume(TokenType.t_lpar)) return false;
                if(!parseTypeName(child)) return false;
                if(!consume(TokenType.t_rpar)) return false;
                break;
            }
            default:
                return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseCastExpression(CategoryNode parent){
        CategoryNode child = new CategoryNode("CastExpression");
        
        if(!consume(TokenType.t_lpar)) return false;
        if(!parseTypeName(child)) return false;
        if(!consume(TokenType.t_rpar)) return false;
        if(!parseFactor(child)) return false;
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseFactorTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("FactorTail");
        
        
        switch (getCurrentType()) {
            case t_star:
            case t_fwslash:
            case t_percent:{
                consumeAndAddAsLeaf(child);
                if(!parseFactor(child)) return false;
                if(!parseFactorTail(child)) return false;
            }
            default:
                break;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseAtom(CategoryNode parent) {
        CategoryNode child = new CategoryNode("Atom");
        
        switch (getCurrentType()) {
            case t_lpar: {
                next();
                if(!parseExpression(child)) return false;
                if(!consume(TokenType.t_rpar)) return error("Missing matching )");
                break;
            }
            case t_id:
            case t_super:{
                consumeAndAddAsLeaf(child);
                if(!parseFunctionCall(child)) return false;
                break;
            }
            case t_typename: {
                consumeAndAddAsLeaf(child);
                if(!consume(TokenType.t_lpar)) return false;
                if(!parseArgsList(child)) return false;
                if(!consume(TokenType.t_rpar)) return false;
                break;
            }
            case t_new: {
                consumeAndAddAsLeaf(child);
                if(!consumeAndAddAsLeaf(TokenType.t_typename, child)) return false;
                if(!consume(TokenType.t_lpar)) return false;
                if(!parseArgsList(child)) return false;
                if(!consume(TokenType.t_rpar)) return false;
                break;
            }
            default:
                return false;
        }
        
        parent.addChild(child);
        return true;
    }
    
    
    
    private boolean parseAtomTail(CategoryNode parent) {
        CategoryNode child = new CategoryNode("AtomTail");
        
        
        switch (getCurrentType()) {
            case t_arrow:
            case t_dot: {
                consumeAndAddAsLeaf(child);
                if(!match(TokenType.t_id)) return false;
                consumeAndAddAsLeaf(child);
                if(!parseFunctionCall(child)) return false;
                if(!parseAtomTail(child)) return false;
                break;
            }
            case t_lbrac: {
                consumeAndAddAsLeaf(child);
                if(!parseExpression(child));
                if(!consume(TokenType.t_rbrac)) return error("Missing matching ]");
                if(!parseAtomTail(child)) return false;
                break;
            }
            case t_dec:
            case t_inc: {
                consumeAndAddAsLeaf(child);
                break;
            }
            default:
                break;
        }
        
        parent.addChild(child);
        return true;
    }
    
    private boolean parseFunctionCall(CategoryNode parent) {
        CategoryNode output = new CategoryNode("FunctionCall");
        
        if(consume(TokenType.t_lpar)) {
            if(!parseArgsList(output)) return false;
            if(!consume(TokenType.t_rpar)) return false;
        }
        
        
        parent.addChild(output);
        return true;
    }
    
    private boolean parseArgsList(CategoryNode parent) {
        CategoryNode output = new CategoryNode("ArgsList");
        
        switch (getCurrentType()) {
            case t_minus:
            case t_not:
            case t_bang:
            case t_star:
            case t_and:
            case t_add:
            case t_inc:
            case t_dec:
            case t_lpar:
            case t_literal:
            case t_id:
            case t_string:
            case t_sizeof:{
                if(!parseExpression(output)) return false;
                if(!parseArgsListTail(output)) return false;
                break;
            }
            default:
                break;
        }
        
        parent.addChild(output);
        return true;
    }
    
    private boolean parseArgsListTail(CategoryNode parent) {
        CategoryNode output = new CategoryNode("ArgsListTail");
        
        switch (getCurrentType()) {
            case t_comma: {
                getNextType();
                if(!parseArgsList(output)) return false;
                break;
            }
            default:
                break;
        }
        
        parent.addChild(output);
        return true;
    }
    
    
    
    // TYPES
    
    private boolean parseTypeName(CategoryNode parent) {
        CategoryNode output = new CategoryNode("TypeName");
        
        if(!parseSpecsAndQuals(output)) return false;
        if(!parseAbstractDeclarator(output)) return false;
        
        parent.addChild(output);
        return true;
    }
    
    private boolean parseSpecsAndQuals(CategoryNode parent) {
        CategoryNode output = new CategoryNode("SpecsAndQuals");
        
        switch (getCurrentType()) {
            case t_const: {
                if(!parseQualifier(output)) return false;
                if(!parseSpecsAndQualsTail(output)) return false;
                break;
            }
            case t_typename:
            case t_void:
            case t_char:
            case t_int:
            case t_long:
            case t_float:
            case t_double:
            case t_unsigned:
            case t_struct:
            case t_union:
            case t_class:
            case t_lpar:
                if(!parseSpecifier(output)) return false;
                if(!parseSpecsAndQualsTail(output)) return false;
                break;
            default:
                return false;
        }
        
        
        parent.addChild(output);
        return true;
    }
    
    
    
    
    private boolean parseSpecsAndQualsTail(CategoryNode parent) {
        CategoryNode output = new CategoryNode("SpecsAndQualsTail");
        
        switch (getCurrentType()) {
            case t_id: {
                if(!isTypeName(getCurrent().getImage())) break;
            }
            case t_typename:
            case t_void:
            case t_char:
            case t_int:
            case t_long:
            case t_float:
            case t_double:
            case t_unsigned:
            case t_struct:
            case t_union:
            case t_class: {
                if(!parseSpecsAndQuals(output)) return false;
                break;
            }
            default:
                break;
        }
        
        parent.addChild(output);
        return true;
    }
    
    
    
    private boolean parseQualifier(CategoryNode parent) {
        CategoryNode output = new CategoryNode("Qualifier");
        
        if(!match(t_const)) return false;
        consumeAndAddAsLeaf(output);
        
        parent.addChild(output);
        return true;
    }
    
    
    private boolean parseQualifierList(CategoryNode parent) {
        CategoryNode output = new CategoryNode("QualifierList");
        
        if(!parseQualifier(output)) return false;
        if(!parseQualifierListTail(output)) return false;
        
        parent.addChild(output);
        return true;
    }
    
    private boolean parseQualifierListTail(CategoryNode parent) {
        CategoryNode output = new CategoryNode("QualifierListTail");
        
        if(match(t_const)) {
            if(!parseQualifierList(parent)) return false;
        }
        
        parent.addChild(output);
        return true;
    }
    
    private boolean parseSpecifier(CategoryNode parent) {
        CategoryNode output = new CategoryNode("Specifier");
        
        switch (getCurrentType()) {
            
            case t_id: {
                if (!isTypeName(getCurrent().getImage())) return error("Not valid specifier");
                consumeAndAddAsLeaf(output);
                break;
            }
            case t_typename:
            case t_void:
            case t_char:
            case t_int:
            case t_long:
            case t_float:
            case t_double:
            case t_unsigned: {
                consumeAndAddAsLeaf(output);
                break;
            }
            case t_struct:
            case t_union: {
                if(!parseStructOrUnionSpecifier(output)) return false;
                break;
            }
            case t_class: {
                if(!parseClassSpecifier(output)) return false;
                break;
            }
            default:
                return error("Not valid specifier");
        }
        
        
        parent.addChild(output);
        return true;
    }
    
    private boolean parseStructOrUnionSpecifier(CategoryNode parent) {
        CategoryNode output = new CategoryNode("StructOrUnionSpecifier");
        
        if(!parseStructOrUnion(output)) return false;
        TokenType type = TokenType.t_id;
        Token current = getCurrent();
        switch (current.getType()) {
            case t_typename: {
                /*
                if(!isCompoundTypeName(getCurrent().getImage())) {
                    return error("Can't use typename in struct/union declaration");
                }
                */
                //type = TokenType.t_typename;
                current = undoTypeName(current);
            }
            case t_id: {
                addAsLeaf(output, current);
                getNext();
                
                if(consume(TokenType.t_lcurl)) {
                    String name = output.getLeafNode(type).getToken().getImage();
                    compoundTypeNames.add(name);
                    
                    if(!parseStructDeclarationList(output)) return false;
                    if(!consume(TokenType.t_rcurl)) return false;
                }
                break;
            }
            case t_lcurl: {
                getNext();
                if(!parseStructDeclarationList(output)) return false;
                if(!consume(TokenType.t_rcurl)) return false;
            }
            
        }
        
        
        parent.addChild(output);
        return true;
    }
    
    private boolean parseStructOrUnion(CategoryNode parent) {
        CategoryNode output = new CategoryNode("StructOrUnion");
        
        if(!(match(TokenType.t_struct) || match(TokenType.t_union))) return false;
        consumeAndAddAsLeaf(output);
        
        parent.addChild(output);
        return true;
    }
    
    private boolean parseClassSpecifier(CategoryNode parent) {
        CategoryNode output = new CategoryNode("ClassSpecifier");
        
        if(!consume(TokenType.t_class)) return false;
        if(!match(TokenType.t_id)) return false;
        String image = getCurrent().getImage();
        consumeAndAddAsLeaf(output);
        typedefed.add(image);
        
        
        parent.addChild(output);
        return true;
    }
    
    private boolean parseAbstractDeclarator(CategoryNode parent) {
        CategoryNode output = new CategoryNode("AbstractDeclarator");
        
        switch (getCurrentType()) {
            case t_star: {
                if(!parsePointer(output)) return false;
                if(!parseDirectAbstractDeclarator(output)) return false;
                break;
            }
            case t_lpar:
            case t_lbrac: {
                if(!parseDirectAbstractDeclarator(output)) return false;
            }
            default:
                break;
        }
        
        parent.addChild(output);
        return true;
    }
    
    private boolean parseDirectAbstractDeclarator(CategoryNode parent) {
        CategoryNode child = new CategoryNode("DirectAbstractDeclarator");
        
        switch (getCurrentType()) {
            case t_lbrac: {
                if(!consumeAndAddAsLeaf(TokenType.t_lbrac, child)) return false;
